--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -1,6 +1,5 @@
 persistence true
 persistence_location /mosquitto/data/
-log_dest file /mosquitto/log/mosquitto.log
-log_type debug
-allow_anonymous true
 listener 1883
+allow_anonymous false
+password_file /mosquitto/config/passwords.txt
