--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/node": "^17.0.35",
+    "dotenv": "^16.0.1",
     "mongodb": "^4.6.0",
     "mqtt": "^4.3.7"
   }
